Version ClaSS-0.8.53 release (2008/08/29)
-----------------------------------------

Bugfix to the auto-generating of the budgetcode for sub-budgets.

Renaming a formgroup now renames any associated teaching classes in the
MarkBook too.

A field added to the orderinvoice table to allow for credit instead of
debit - affects only the projected balance for a budget.



Version ClaSS-0.8.52 release (2008/08/13)
-----------------------------------------

Fixed losing the category on the backgrounds.

New config options for enrolment assessments. This allows for a
general assessment to be edited as part of the enrolment page in the
InfoBook. The result of the enrolment assessment is shared with staff
as the first entry in the backgrounds list.

Have moved the Backgrounds out from fetchStudent to a seperate
fetchBackgrounds function. fetchStudent now includes the Medical and
SEN flags.

The year_end scripts now iterates over all sites listed in
$CFG->feeders and calls the httpscripts/transfer_students.php which
responds with the xml for all Students in a yid who are
transfering. The transfer data per student includes all student
details plus all comments.

Made both transfer scripts aware of the current curriculum year to catch
differences between schools.

Bugfix to join_community for when moving between forms.

Having different endmonths for courses was not yet implemented and have
removed this fully from get_curriculumyear() until it is.

Critical change to the method used for handling the curriculum
year. No longer calculated based on the current date but stored as a
special record in the community table in the db. The year_end function
up dates this value +1 when called.


Version ClaSS-0.8.51 release (2008/07/11)
-----------------------------------------

Added a field 'code' to the guardian table for use for ID or fiscal
codes.

Allowed for the option of remote authentication in the httpscripts
when a session does not exist. Aimed at CURLing between ClaSS sites.
