@@ -31,7 +31,7 @@ div#bookbox{
     color:#000000;
 	}
 
-/*these are register specifi additions to the sidtable class*/
+/*these are register specific additions to the sidtable class*/
 .sidtable td[late="1"] {  
 	background-image:url("../images/dot1.png");
 	background-repeat: no-repeat;
