@@ -9,6 +9,10 @@ MarkBook too.
 A field added to the orderinvoice table to allow for credit instead of
 debit - affects only the projected balance for a budget.
 
+Summary attendnace button added to the Register.
+
+Replaced the green square with a select for lates during registration
+and has associated latecodes.
 
 
 Version ClaSS-0.8.52 release (2008/08/13)
